change names from plural to singular
